--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -148,7 +148,11 @@
   }
 
   .about_item_box{
+    width:auto;
+    max-width:initial;
     min-height:initial;
+    height: 300px;
+
   }
 
   .searchtext_def {
@@ -160,24 +164,24 @@
   }
 
 
-  .button_menu-mobile{
-    font-size: 22px;
-    padding-left: 30px;
-  }
-  
+  //.button_menu-mobile{
+  //  font-size: 22px;
+  //  padding-left: 30px;
+  //}
+  //
 }
 
 @media only screen and (max-width: 600px) {
 
-  .logo_link {
-    width: 100px;
-  }
-  .button_menu-mobile{
-    font-size: 26px;
-  }
-  .logo_link{
-    width: 94px;
-  }
+  //.logo_link {
+  //  width: 100px;
+  //}
+  //.button_menu-mobile{
+  //  font-size: 26px;
+  //}
+  //.logo_link{
+  //  width: 94px;
+  //}
 
   .price-item-pic-wrap{
     height:auto;
@@ -196,6 +200,16 @@
     display: none;
   }
 
+  .button_buyProduct{
+    float: none;
+    margin: 20px auto;
+    display: block;
+  }
+  .button_continueBuying__link{
+    display: block;
+    text-align: center;
+  }
+
 
 }
 /* Extra Small Devices, Phones 480px */
@@ -203,25 +217,25 @@
   .block_ssearch {
     left: 15%;
   }
-  .logo_link{
-    width: 70px;
-  }
+  //.logo_link{
+  //  width: 70px;
+  //}
 
-  .button_menu-mobile{
-    font-size: 18px;
-    padding-left: 28px;
-  }
+  //.button_menu-mobile{
+  //  font-size: 18px;
+  //  padding-left: 28px;
+  //}
 
   .root-logo{
     left: -20px;
     float: none;
   }
-  .decor_burger{
-    font-size: 24px;
-  }
-  .button_menu-mobile{
-    font-size: 18px;
-  }
+  //.decor_burger{
+  //  font-size: 24px;
+  //}
+  //.button_menu-mobile{
+  //  font-size: 18px;
+  //}
 
   .binfo{
     min-width:initial;
@@ -237,15 +251,19 @@
 
 }
 @media only screen and (max-width: 400px) {
-  .root-logo{
-    left: -30px;
-  }
-  .button_menu-mobile{
-    font-size: 12px;
-  }
+  //.root-logo{
+  //  left: -30px;
+  //}
+  //.button_menu-mobile{
+  //  font-size: 12px;
+  //}
 
-  .logo_link{
-    width: 50px;
+  //.logo_link{
+  //  width: 50px;
+  //}
+
+  .about_item_box{
+    height: 250px;
   }
 }
 /* Custom, iPhone Retina 320px */
