--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -719,27 +719,27 @@ button {
   width: 150px;
 }
 
-.button_menu-mobile {
-  position: relative;
-  display: inline-block;
-  padding-left: 34px;
+//.button_menu-mobile {
+//  position: relative;
+//  display: inline-block;
+//  padding-left: 34px;
+//
+//  background-color: inherit;
+//  color: #3465a4;
+//  font-size: 30px;
+//}
 
-  background-color: inherit;
-  color: #3465a4;
-  font-size: 30px;
-}
-
-.decor_burger:after {
-  content: '\f0c9';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 16px;
-  color: #fff;
-  transform: translate(-50%, -50%);
-  font-family: FontAwesome;
-}
+//.decor_burger:after {
+//  content: '\f0c9';
+//  position: absolute;
+//  width: 100%;
+//  height: 100%;
+//  top: 50%;
+//  left: 16px;
+//  color: #fff;
+//  transform: translate(-50%, -50%);
+//  font-family: FontAwesome;
+//}
 
 .root-logo img {
   width: 100%;
